# boldt-posttrain-autoresearch

./: .gitignore  AUTORESEARCH_POSTTRAIN.md  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/commands/: pt-baseline.md  pt-bootstrap.md  pt-data.md  pt-eval.md  pt-integrity.md  pt-merge.md  pt-orient.md  pt-promote.md  pt-run.md  pt-status.md  pt-train.md  pt-trial.md
.claude/hooks/: guard_posttrain.py  pt_welcome.sh
.github/workflows/: ci.yml
configs/posttrain/: base.json  current.json  license_reviews.json  policy.json
configs/posttrain/experiments/: README.md
data/eval/: german-core-v1.jsonl
data/eval/lm_eval_tasks/: boldt_belebele_de.yaml  boldt_global_piqa_de.yaml  boldt_multiblimp_de.yaml
docs/: data-pipeline.md  eval-plan.md  evaluation.md  merge-search.md  operations.md  posttrain-script-contracts.md  preference-and-distillation.md  scoring-and-promotion.md  training.md
scripts/: README.md  build_eval_suite.py  check_posttrain_integrity.py  pt_baseline.py  pt_discover_openeurollm_de.py  pt_distill_trial.py  pt_eval.py  pt_frontier_status.py  pt_log_result.py  pt_loop.py  pt_merge_search.py  pt_prepare_openeurollm_de.py  pt_promote.py  pt_report.py  pt_score.py  pt_status.py  pt_train_cpt.py  pt_train_preference.py  pt_train_specialist.py  sync_conda_env.sh
src/boldt_posttrain/: __init__.py  artifacts.py  cli.py  config.py  data_pipeline.py  distillation.py  evaluation.py  frontier.py  loop.py  merge.py  policy.py  preference.py  provenance.py  recipe.py  resolver.py  scoring.py  training.py
tests/: artifact_chain.py  test_artifacts.py  test_baseline.py  test_cli.py  test_commands.py  test_conda_environment.py  test_config.py  test_data_discovery.py  test_data_prepare.py  test_distillation.py  test_docs_commands.py  test_e2e_cpu.py  test_evaluation.py  test_frontier.py  test_integrity.py  test_loop.py  test_merge_eligibility.py  test_merge_integration.py  test_policy.py  test_preference.py  test_promotion.py  test_resolver.py  test_scoring.py  test_static_contracts.py  test_training_gpu.py  test_training_integration.py  test_training_preflight.py  tiny_model.py
tests/fixtures/datasets/: cpt.jsonl  preference.jsonl  sft.jsonl
