[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "boldt-posttrain-autoresearch"
version = "0.1.0"
description = "German-first post-training AutoResearch loop for mayflowergmbh/boldt-dc-1b-german-it-16k-dpo (branch -> specialist -> merge -> eval -> promote)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Boldt post-training maintainers" }]
keywords = ["post-training", "german", "lora", "qlora", "dpo", "mergekit", "instruction-tuning"]

# The loop's CORE and ALL dry-run / validation / scoring / integrity gates run on the
# Python standard library only. Heavy ML dependencies are optional and used solely by the
# `--real` training / merge / eval code paths (which are dry-runnable without weights here).
dependencies = []

[project.optional-dependencies]
train = [
  "torch==2.6.0",
  "transformers==4.57.6",
  "trl==1.8.0",
  "peft==0.19.1",
  "accelerate==1.6.0",
  "datasets==5.0.0",
  "bitsandbytes==0.49.2",
  "safetensors==0.5.3",
]
# Mergekit for the merge-search lever (linear/slerp/ties/dare-ties over compatible checkpoints).
merge = [
  "mergekit==0.1.4",
]
# German-core benchmark suite (lm-eval German tasks) + dataset access for instruction evals.
eval = [
  "lm-eval==0.4.12",
  "datasets==5.0.0",
  "torch==2.6.0",
  "transformers==4.57.6",
  "peft==0.19.1",
  "accelerate==1.6.0",
  "safetensors==0.5.3",
]
# Language-id for the German-candidate data filter (deterministic fastText/langid check).
data = [
  "fasttext-wheel==0.9.2",
  "numpy==1.26.4",
  "huggingface-hub==0.36.2",
  "datasets==5.0.0",
  "datasketch==2.0.0",
]
dev = [
  "pytest==9.1.1",
  "ruff==0.15.22",
]

[project.scripts]
pt = "boldt_posttrain.cli:main"
pt-status = "boldt_posttrain.cli:main_status"
pt-report = "boldt_posttrain.cli:main_report"
pt-integrity = "boldt_posttrain.cli:main_integrity"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
